--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   <body>
 
   <header>
-      <img src="img/logo_big_new.png">
+      <img src="img/logo_big_new.png" alt="leboncoin_logo">
       <p>Leboncoin.fr part d'une idée simple : la bonne affaire</br>
 est au coin de la rue !Pour passer ou chercher des</br>
 annonces, cliquez sur la région de votre choix et</br>
 trouvez la bonne affaire parmi <strong>26 735 443 annonces</strong></p>
+      <img src="img/line.png" alt="separator"><p class="title">Simple, rapide et efficace !</p>
   </header>
 
 <section id="map"><img id="Image-Maps-Com-image-maps-2015-11-05-082240" src="http://www.image-maps.com/m/private/0/kqc4qggrv91r2ok8jg1b9lsoe5_map.gif" border="0" width="400" height="394" orgWidth="400" orgHeight="394" usemap="#image-maps-2015-11-05-082240" alt="Carte des régions de la france" />
@@ -36,33 +37,33 @@ trouvez la bonne affaire parmi <strong>26 735 443 annonces</strong></p>
 
 <aside>
     <ul>
-        <li>Alsace</li>
-        <li>Aquitaine</li>
-        <li>Auvergne</li>
-        <li>Basse-Normandie</li>
-        <li>Bourgogne</li>
-        <li>Bretagne</li>
-        <li>Centre</li>
-        <li>Champagne-Ardenne</li>
-        <li>Corse</li>
-        <li>Franche-Comté</li>
-        <li>Haute-Normandie</li>
-        <li>Ile-de-France</li>
-        <li>Languedoc-Roussillon</li>
-        <li>Limousin</li>
-        <li>Lorraine</li>
-        <li>Midi-Pyrénées</li>
-        <li>Nord-Pas-de-Calais</li>
-        <li>Pays de la Loire</li>
-        <li>Picardie</li>
-        <li>Poitou-Charentes</li>
-        <li>Provence-Alpes-Côte d'Azur</li>
-        <li>Rhône-Alpes</li>
+        <li><a href="">Alsace</li>
+        <li><a href="">Aquitaine</li>
+        <li><a href="">Auvergne</li>
+        <li><a href="">Basse-Normandie</li>
+        <li><a href="">Bourgogne</li>
+        <li><a href="">Bretagne</li>
+        <li><a href="">Centre</li>
+        <li><a href="">Champagne-Ardenne</li>
+        <li><a href="">Corse</li>
+        <li><a href="">Franche-Comté</li>
+        <li><a href="">Haute-Normandie</li>
+        <li><a href="">Ile-de-France</li>
+        <li><a href="">Languedoc-Roussillon</li>
+        <li><a href="">Limousin</li>
+        <li><a href="">Lorraine</li>
+        <li><a href="">Midi-Pyrénées</li>
+        <li><a href="">Nord-Pas-de-Calais</li>
+        <li><a href="">Pays de la Loire</li>
+        <li><a href="">Picardie</li>
+        <li><a href="">Poitou-Charentes</li>
+        <li><a href="">Provence-Alpes-Côte d'Azur</li>
+        <li><a href="">Rhône-Alpes</li>
 
-        <li>Guadeloupe</li>
-        <li>Martinique</li>
-        <li>Guyane</li>
-        <li>Réunion</li>
+        <li><a href="">Guadeloupe</li>
+        <li><a href="">Martinique</li>
+        <li><a href="">Guyane</li>
+        <li><a href="">Réunion</li>
 
     </ul>
 
